# npge

./: .gitignore  .gitmodules  .hgignore  .hgtags  .travis.yml  API.md  AUTHORS  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  get_seqs.py  header.html  install.sh  replace_names.py  windows-build-requirements  windows-build.sh
brucella/: 10genomes.tsv  17genomes.tsv  1chr.tsv  2genomes.tsv  5genomes.tsv  CMakeLists.txt  brucella.make  brucella.sh  make_target_list.sh
doc/: API.md  CMakeLists.txt  Doxyfile.in  block-type.dot  compare-pangenomes.md  compare-pangenomes_ru.md  eccb14.md  eccb14_ru.md  find-low-identity-subblocks.md  find-low-identity-subblocks_ru.md  good-subblocks.md  good-subblocks_ru.md  greedy-multiple-alignment.md  head.html
doc/img/: Makefile  algorithm.dot  blockset-maker.dot  models-legend.dot  models.dot  prepangenome-maker.dot
examples/Brucella/: 10genomes.tsv  17genomes.tsv  1chr.tsv  2genomes.tsv  5genomes.tsv
examples/Burkholderia_cenocepacia/: genomes.tsv
linux/: CMakeLists.txt  all-steps.sh  build.sh  check-ia32.sha1  check-x64.sha1  check-x64.sha256  deploy.sh  package.sh.in  requirements.sh  toolchain-linux32.cmake  toolchain-linux64.cmake
mac/: build.sh  deploy.sh  requirements.sh
src/: Alignment.cpp  Alignment.hpp  AlignmentRow.cpp  AlignmentRow.hpp  AnchorFinder.cpp  AnchorFinder.hpp  Block.cpp  Block.hpp  BlockSet.cpp  BlockSet.hpp  BloomFilter.cpp  BloomFilter.hpp  CMakeLists.txt  Exception.cpp  FastaReader.cpp  FastaReader.hpp  FindLua.cmake  FindLuabind.cmake  Fragment.cpp  Fragment.hpp  JoinApprover.cpp  JoinApprover.hpp  PairAligner.cpp  PairAligner.hpp  Sequence.cpp  Sequence.hpp  add_rest.cxx  bin2c.lua  bloomrepeats.cxx  char_to_size.hpp  complement.hpp  config.hpp  config.hpp.in  find_anchors.cxx  find_repeats.cxx  from_blast.cxx  global.hpp  init_lua-npge.sh  make_hash.cpp  make_hash.hpp  (+6 more)
src/algo/: AbstractAligner.cpp  AbstractAligner.hpp  AbstractOutput.cpp  AbstractOutput.hpp  AddBlastBlocks.cpp  AddBlastBlocks.hpp  AddBlocks.cpp  AddBlocks.hpp  AddGenes.cpp  AddGenes.hpp  AddSequences.cpp  AddSequences.hpp  Align.cpp  Align.hpp  AllOptions.cpp  AllOptions.hpp  AllProcessors.cpp  AllProcessors.hpp  AnchorFinder.cpp  AnchorFinder.hpp  AreBlocksGood.cpp  AreBlocksGood.hpp  BlastFinder.cpp  BlastFinder.hpp  BlastRunner.cpp  BlastRunner.hpp  BlockFinder.cpp  BlockFinder.hpp  BlockInfo.cpp  BlockInfo.hpp  BlockSetAlignment.cpp  BlockSetAlignment.hpp  BlocksExpander.cpp  BlocksExpander.hpp  BlocksJobs.cpp  BlocksJobs.hpp  BloomFilter.cpp  BloomFilter.hpp  CMakeLists.txt  CheckNoOverlaps.cpp  (+266 more)
src/gui/: AlignmentModel.cpp  AlignmentModel.hpp  AlignmentView.cpp  AlignmentView.hpp  BSAItemDelegate.cpp  BSAItemDelegate.hpp  BlockSearcher.cpp  BlockSearcher.hpp  BlockSetModel.hpp  BlockSetWidget.cpp  BlockSetWidget.hpp  BlockSetWidget.ui  CMakeLists.txt  GuiBSs.hpp  ReadingThread.cpp  ReadingThread.hpp  brgui.pro  gui-global.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  move_rows.cpp  move_rows.hpp  qnpge.qrc
src/lua_module/: CMakeLists.txt  luaopen_npge.cpp  luaopen_npge.hpp
src/model/: Alignment.cpp  Alignment.hpp  AlignmentRow.cpp  AlignmentRow.hpp  Block.cpp  Block.hpp  BlockSet.cpp  BlockSet.hpp  CMakeLists.txt  Fragment.cpp  Fragment.hpp  FragmentCollection.hpp  Sequence.cpp  Sequence.hpp  block_hash.cpp  block_hash.hpp  block_set_alignment.cpp  block_set_alignment.hpp  block_stat.cpp  block_stat.hpp  convert_position.cpp  convert_position.hpp  model_lua.cpp  model_lua.hpp  read_block_set.cpp  read_block_set.hpp
src/test/: CMakeLists.txt  aligner.cpp  alignment.cpp  alignment_row.cpp  anchor_finder.cpp  block-set.cpp  block.cpp  block_set.cpp  blocks_expander.cpp  blocks_jobs.cpp  bloom-filter.cpp  bloom_filter.cpp  boundaries.cpp  class_name.cpp  complement.cpp  conseq.cpp  convert_position.cpp  create_all.cxx  create_all.npge  cut_gaps.cpp  decimal.cpp  exception.cpp  expander_base.cpp  fasta.cpp  filter.cpp  fragment.cpp  fragments_expander.cpp  graph.cpp  hash-estimator.py  hash.cpp  hit.cpp  join_approver.cpp  joiner.cpp  lua_test.cxx  make_pangenome.cpp  mapany.cpp  meta.cpp  meta_pipe.cpp  meta_test.cxx  move_gaps.cpp  (+20 more)
src/tool/: CMakeLists.txt  FindReadline.cmake  add_blast.br  add_blast.cxx  add_blast.npge  add_genes.br  add_genes.npge  add_rest.br  add_rest.cxx  add_rest.npge  align.npge  align_all.br  align_all.cxx  align_all.npge  all_processors.cxx  analyse-gene-clusters.py  are_blocks_good.npge  blast_hits.br  blast_hits.cxx  blast_hits.npge  blast_small_blocks.br  blast_small_blocks.npge  blast_union.br  blast_union.npge  blockinfo.br  blockinfo.cxx  blockinfo.npge  bloom_with_blast.br  bloom_with_blast.cxx  bloom_with_blast.npge  bloomrepeats.br  bloomrepeats.cxx  bloomrepeats.npge  brmeta.cxx  cleanup_hits.br  cleanup_hits.npge  consensus.br  consensus.cxx  consensus.npge  consensus_tree.br  (+105 more)
src/tool/luaprompt/: ChangeLog  README  luap.c  prompt.c  prompt.h
src/tool/luaprompt/compat/: asprintf.h
src/util/: AnyAs.cpp  AnyAs.hpp  CMakeLists.txt  Decimal.cpp  Decimal.hpp  Exception.cpp  Exception.hpp  FastaReader.cpp  FastaReader.hpp  GeneralAligner.hpp  Graph.hpp  SortedVector.hpp  boost-assert.hpp  boost-xtime.hpp  boundaries.cpp  boundaries.hpp  cast.hpp  char_to_size.hpp  class_name.cpp  class_name.hpp  complement.cpp  complement.hpp  curl_download.cpp  curl_download.hpp  download_file.cpp  download_file.hpp  htmlencode.cpp  htmlencode.hpp  is_wine.cpp  is_wine.hpp  key_value.cpp  key_value.hpp  lua_npge.cpp  lua_npge.hpp  luabind-error.hpp  luabind-format-signature.hpp  make_hash.cpp  make_hash.hpp  name_to_stream.cpp  name_to_stream.hpp  (+32 more)
test-lua/: aligner-remove-gaps.lua  anyas.lua  block_set.lua  blocksjobs.lua  bs-read.lua  decimal.lua  deleter.lua  fragment-collection.lua  fragment.lua  sequence.lua  simple-block.lua  util.lua
windows/: CMakeLists.txt  all-steps-impl.sh  all-steps.sh  build-requirements  build.sh  check-ia32.sha1  check-ia32.sha256  check-x64.sha1  check-x64.sha256  deploy.sh  npge.rc.in  package.sh.in  requirements.sh  wizard.nsi.in
(+118 files in other folders)
